ghc-4335c07/testsuite/tests/th/T10796b.stderr

T10796b.hs:8:17: error:
    • Can't construct a pattern from name Data.Set.Internal.fromList
    • In the untyped splice:
        $(dataToPatQ (const Nothing) (fromList "test"))
